appId: com.google.android.youtube
tags:
  - main-flow-youtube
env:
  Search_word: BLACKPINK
  post_comment: forever blink
---
- launchApp:
    clearState: True
# if youtube logo is visible
- assertVisible:
    id: youtube_logo

- tapOn: Search
- inputText: ${Search_word}

# result with second line or the first index
- tapOn:
    id: linearLayout

# Will scroll the screen until desired element text is visible and will tap the video to play
- scrollUntilVisible:
    element:
      text: BLACKPINK - 'Kill This Love' M/V - 3 minutes, 14 seconds - Go to channel - BLACKPINK - 2.1 billion views - 6 years ago - play video
- tapOn: BLACKPINK - 'Kill This Love' M/V - 3 minutes, 14 seconds - Go to channel - BLACKPINK - 2.1 billion views - 6 years ago - play video


# wait  for ad to appear (if any)
- extendedWaitUntil:
    visible:
      id: content
    timeout: 10000

# try tapping "Skip Ad" (if skippable)
- retry:
    maxRetries: 3
    commands:
      - tapOn: 'Skip Ad'

  # <----- VUDEO CONTROLS ----->

# Pause Video
- doubleTapOn:
    id: player_view
    delay: 100 # (optional) Delay between taps. Default, 100ms

# toggle fullscreen
- tapOn: Enter fullscreen
- tapOn: Exit fullscreen

# Scrub timeline
- swipe:
    start: 3%, 28% # From (90% of width, 50% of height)
    end: 28%, 28% # To (10% of width, 50% of height)

# resume video
- tapOn:
    id: player_control_play_pause_replay_button

# Like / Dislike
- tapOn:
    point: 3%,51%
- tapOn: Dislike this video

# Subscribe / Unsubscribe
- assertVisible: Subscribe to BLACKPINK.
- tapOn: Subscribe to BLACKPINK.
- assertVisible: Options # after tapping the subscribe button
- tapOn: Options
- tapOn: Unsubscribe from BLACKPINK.
- assertVisible: Subscribe to BLACKPINK.

# Post a Comment
- tapOn:
    point: 3%,55% # to open the comment section
- assertVisible: Comments
- tapOn:
    point: 50%, 92%

- inputText: ${post_comment}
- tapOn: Send comment
- tapOn: Newest

- pressKey: Back

# Share Video
- tapOn: Share
- assertVisible: News Feed
- tapOn: News Feed

# Facebook
- tapOn: POST # Facebook
- pressKey: Back

#  Video Recommendations / Feed Scroll
- repeat:
    times: 5
    commands:
      - scroll
